some changes to finalize projects

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -61,8 +61,7 @@
           />
           <h3>BBQ Chicken</h3>
           <p>
-            Traditional Jamaican dish with ackee fruit and salted cod, served
-            with plantains.
+            Juicy chicken marinated in a zesty blend of Jamaican spices and barbecue sauce, then grilled to smoky perfection.
           </p>
           <span>$14.99</span>
         </div>
@@ -75,8 +74,7 @@
           />
           <h3>Escovitch Fish</h3>
           <p>
-            Traditional Jamaican dish with ackee fruit and salted cod, served
-            with plantains.
+            Crispy fried fish topped with a tangy, spicy pickled vegetable sauce for a classic Jamaican flavor.
           </p>
           <span>$14.99</span>
         </div>
@@ -89,8 +87,7 @@
           />
           <h3>Oxtail</h3>
           <p>
-            Traditional Jamaican dish with ackee fruit and salted cod, served
-            with plantains.
+            Slow-cooked in a savory gravy until tender, with deep, spicy flavors.
           </p>
           <span>$14.99</span>
         </div>
@@ -103,8 +100,7 @@
           />
           <h3>Curried Shrimp</h3>
           <p>
-            Traditional Jamaican dish with ackee fruit and salted cod, served
-            with plantains.
+            Shrimp simmered in a creamy, aromatic curry sauce with fresh vegetables.
           </p>
           <span>$14.99</span>
         </div>
@@ -117,8 +113,7 @@
           />
           <h3>Curried Chicken</h3>
           <p>
-            Traditional Jamaican dish with ackee fruit and salted cod, served
-            with plantains.
+            Tender chicken simmered in a creamy, spiced curry sauce.
           </p>
           <span>$14.99</span>
         </div>
@@ -131,8 +126,7 @@
           />
           <h3>Jerk Chicken</h3>
           <p>
-            Traditional Jamaican dish with ackee fruit and salted cod, served
-            with plantains.
+            Grilled chicken with a smoky, spicy jerk seasoning.
           </p>
           <span>$14.99</span>
         </div>
@@ -145,8 +139,7 @@
           />
           <h3>Jerk Chicken Wings</h3>
           <p>
-            Traditional Jamaican dish with ackee fruit and salted cod, served
-            with plantains.
+            Flavorful wings marinated in a bold jerk spice blend and grilled to perfection.
           </p>
           <span>$14.99</span>
         </div>
@@ -159,8 +152,7 @@
           />
           <h3>Curried Goat</h3>
           <p>
-            Traditional Jamaican dish with ackee fruit and salted cod, served
-            with plantains.
+            Tender goat meat simmered in a rich, spicy curry sauce with vibrant flavors.
           </p>
           <span>$14.99</span>
         </div>
@@ -183,8 +175,7 @@
           />
           <h3>Beef Patty</h3>
           <p>
-            Traditional Jamaican dish with ackee fruit and salted cod, served
-            with plantains.
+            Spiced ground beef encased in a flaky, golden pastry.
           </p>
           <span>$2.50</span>
         </div>
@@ -197,8 +188,7 @@
           />
           <h3>Chicken Patty</h3>
           <p>
-            Traditional Jamaican dish with ackee fruit and salted cod, served
-            with plantains.
+            Savory chicken filling wrapped in a crisp, buttery crust.
           </p>
           <span>$3.00</span>
         </div>
@@ -211,8 +201,7 @@
           />
           <h3>Jerk Chicken Patty</h3>
           <p>
-            Traditional Jamaican dish with ackee fruit and salted cod, served
-            with plantains.
+            Spicy jerk-seasoned chicken inside a flaky pastry shell.
           </p>
           <span>$3.50</span>
         </div>
@@ -225,8 +214,7 @@
           />
           <h3>Spinach Patty</h3>
           <p>
-            Traditional Jamaican dish with ackee fruit and salted cod, served
-            with plantains.
+            Fresh spinach and savory seasonings wrapped in a flaky pastry.
           </p>
           <span>$2.00</span>
         </div>
@@ -239,8 +227,7 @@
           />
           <h3> Vegetable Patty</h3>
           <p>
-            Traditional Jamaican dish with ackee fruit and salted cod, served
-            with plantains.
+            A mix of seasoned vegetables encased in a crispy, savory crust.
           </p>
           <span>$2.00</span>
         </div>
@@ -253,10 +240,9 @@
           />
           <h3>Patty & Coco Bread</h3>
           <p>
-            Traditional Jamaican dish with ackee fruit and salted cod, served
-            with plantains.
+            A spicy patty paired with soft, warm coco bread for a classic combination.
           </p>
-          <span>$3.50</span>
+          <span>$4.00</span>
         </div>
     </section>
 <!----------------------------------- Table---------- data------------------------------ -->
