made some edits  and added a readme page

--- a/pages/index.html
+++ b/pages/index.html
@@ -165,7 +165,7 @@
                 flavors."
               </p>
             </blockquote>
-            <cite>-Sarah</cite>
+            <cite>-Kayla</cite>
           </div>
           <div class="testimonial">
             <blockquote>
