--- a/pages/index.html
+++ b/pages/index.html
@@ -55,6 +55,8 @@
           <p>Goodness</p>
         </div>
       </div>
+      
+
       <div class="container-box">
         <div class="c-mainbox">
           <div class="container-img">
@@ -110,7 +112,7 @@
         </div>
       </div>
     </section>
-
+<!-----------------------------------------------Specials----------------------------------------------------- -->
     <div class="specials">
       <h2>Specials</h2>
       <div class="specials-grid">
@@ -165,22 +167,23 @@
                 flavors."
               </p>
             </blockquote>
-            <cite>-Kayla</cite>
+            <cite>- Hazel</cite>
           </div>
           <div class="testimonial">
             <blockquote>
               <img src="../images/image-87.png" />
-              <p>"A wonderful experience, I felt like I was in Jamaica."</p>
+              <p>"A wonderful experience, I felt like I was in Jamaica 10/10."</p>
             </blockquote>
             <cite>- John</cite>
           </div>
           <div class="testimonial">
-            <blockquote>
+          <blockquote>
               <img src="../images/image-35.png" />
-              <p>"Every dish was a delightful journey through Jamaican cuisine. Highly recommend!"</p>
+              <p>"Every dish was a delightful journey through Jamaican cuisine."</p>
             </blockquote>
             <cite>- Imani</cite>
           </div>
+
         </div>
       </section>
     </div>
