--- a/pages/index.html
+++ b/pages/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../styles/style.css" />
     <link href="https://fonts.cdnfonts.com/css/jorgey" rel="stylesheet" />
     <link href="https://fonts.cdnfonts.com/css/okashi" rel="stylesheet" />
+    <script src="../scripts/index.js" defer></script>
 
     <title>Island Spice</title>
   </head>
@@ -20,7 +21,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="menu.html">Our Menu</a></li>
         <li><a href="reservations.html">Reservations</a></li>
-        <li><a href="#Reviews">Reviews</a></li>
+        <li><a href="index.html#Reviews">Reviews</a></li>
       </ul>
 
       <div class="bx bx-menu" id="menu-icon">
@@ -31,7 +32,7 @@
         <button>Order Now!</button>
       </div>
     </header>
-
+<!--------------- Hero--------section----------------------- -->
     <section class="hero" id="Home">
       <div class="hero-text">
         <h1>
@@ -47,6 +48,9 @@
       </div>
     </section>
 
+
+<!-------------------------------Ingredients--------------------------------->
+
     <section class="container">
       <div class="ingredients">
         <div class="ingredients-text">
@@ -57,61 +61,72 @@
       </div>
       
 
-      <div class="container-box">
-        <div class="c-mainbox">
-          <div class="container-img">
-            <img src="../images/scallion.png" alt="box1" />
+     <div class="container-box-wrapper">
+        <button class="scroll-arrow left-arrow">
+          <i class="fas fa-chevron-left"></i>
+        </button>
+        <div class="container-box">
+          
+          <div class="c-mainbox">
+            <div class="container-img">
+              <img src="../images/scallion.png" alt="box1" />
+            </div>
+            <div class="container text">
+              <p>Scallion</p>
+            </div>
           </div>
-          <div class="container text">
-            <p>Scallion</p>
+          <div class="c-mainbox">
+            <div class="container-img">
+              <img src="../images/curry.png" alt="'box2" />
+            </div>
+            <div class="container text">
+              <p>Curry Powder</p>
+            </div>
           </div>
-        </div>
-        <div class="c-mainbox">
-          <div class="container-img">
-            <img src="../images/curry.png" alt="'box2" />
-          </div>
-          <div class="container text">
-            <p>Curry Powder</p>
-          </div>
-        </div>
 
-        <div class="c-mainbox">
-          <div class="container-img">
-            <img src="../images/ginger.png" alt="'box3" />
+          <div class="c-mainbox">
+            <div class="container-img">
+              <img src="../images/ginger.png" alt="'box3" />
+            </div>
+            <div class="container text">
+              <p>Ginger</p>
+            </div>
           </div>
-          <div class="container text">
-            <p>Ginger</p>
-          </div>
-        </div>
 
-        <div class="c-mainbox">
-          <div class="container-img">
-            <img src="../images/scotch-bonnet.png" alt="'box4" />
+          <div class="c-mainbox">
+            <div class="container-img">
+              <img src="../images/scotch-bonnet.png" alt="'box4" />
+            </div>
+            <div class="container text">
+              <p>Scotch Bonnet</p>
+            </div>
           </div>
-          <div class="container text">
-            <p>Scotch Bonnet</p>
-          </div>
-        </div>
 
-        <div class="c-mainbox">
-          <div class="container-img">
-            <img src="../images/pimento.png" alt="'box4" />
+          <div class="c-mainbox">
+            <div class="container-img">
+              <img src="../images/pimento.png" alt="'box4" />
+            </div>
+            <div class="container text">
+              <p>Pimento Seeds</p>
+            </div>
           </div>
-          <div class="container text">
-            <p>Pimento Seeds</p>
-          </div>
-        </div>
 
-        <div class="c-mainbox">
-          <div class="container-img">
-            <img src="../images/onion.png" alt="'box4" />
-          </div>
-          <div class="container text">
-            <p>Onions</p>
+          <div class="c-mainbox">
+            <div class="container-img">
+              <img src="../images/onion.png" alt="'box4" />
+            </div>
+            <div class="container text">
+              <p>Onions</p>
+            </div>
           </div>
         </div>
-      </div>
+        <button class="scroll-arrow right-arrow">
+          <i class="fas fa-chevron-right"></i>
+        </button>
+     </div>
     </section>
+
+
 <!-----------------------------------------------Specials----------------------------------------------------- -->
     <div class="specials">
       <h2>Specials</h2>
