--- a/pages/menu.html
+++ b/pages/menu.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../styles/style.css" />
     <link href="https://fonts.cdnfonts.com/css/jorgey" rel="stylesheet" />
     <link href="https://fonts.cdnfonts.com/css/okashi" rel="stylesheet" />
+    <script src="../scripts/index.js" defer></script>
     <title>Menu</title>
   </head>
   <body>
@@ -19,7 +20,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="menu.html">Our Menu</a></li>
         <li><a href="reservations.html">Reservations</a></li>
-        <li><a href="">Reviews</a></li>
+        <li><a href="index.html#Reviews">Reviews</a></li>
       </ul>
 
       <div class="bx bx-menu" id="menu-icon">
@@ -53,7 +54,7 @@
       </div>
 
       <div class="entree-items">
-        <div class="special-item">
+        <div class="special-item special-item-mobile">
           <img
             class="special-images"
             src="../images/chicken.png"
@@ -66,7 +67,7 @@
           <span>$14.99</span>
         </div>
 
-        <div class="special-item">
+        <div class="special-item special-item-mobile">
           <img
             class="special-images"
             src="../images/fishmeal.png"
@@ -79,7 +80,7 @@
           <span>$14.99</span>
         </div>
 
-        <div class="special-item">
+        <div class="special-item special-item-mobile">
           <img
             class="special-images"
             src="../images/oxtail.png"
@@ -94,7 +95,7 @@
 
         <div class="special-item">
           <img
-            class="special-images"
+            class="special-images special-item-mobile"
             src="../images/curry-shrimp.png"
             alt="Special Dish 1"
           />
@@ -107,7 +108,7 @@
 
         <div class="special-item">
           <img
-            class="special-images"
+            class="special-images special-item-mobile"
             src="../images/currried-chicken.png"
             alt="Special Dish 1"
           />
@@ -118,7 +119,7 @@
           <span>$14.99</span>
         </div>
 
-        <div class="special-item">
+        <div class="special-item special-item-mobile">
           <img
             class="special-images"
             src="../images/jerk.png"
@@ -308,7 +309,10 @@
     </section>
 
    
-
+  <script
+  src="https://kit.fontawesome.com/fc84bd7ef1.js"
+  crossorigin="anonymous"
+  ></script>
     
   </body>
 </html>
