--- a/pages/reservations.html
+++ b/pages/reservations.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="../styles/style.css">
     <link href="https://fonts.cdnfonts.com/css/jorgey" rel="stylesheet">
     <link href="https://fonts.cdnfonts.com/css/okashi" rel="stylesheet" />
+    <script src="../scripts/index.js" defer></script>
     <title>Reservations</title>
 </head>
 <body>
@@ -17,7 +18,7 @@
            <li><a href="about.html">About</a></li>
            <li><a href="menu.html">Our Menu</a></li>
            <li><a href="reservations.html">Reservations</a></li>
-           <li><a href=" ">Reviews</a></li>
+           <li><a href="index.html#Reviews ">Reviews</a></li>
         </ul>
 
         <div class="bx bx-menu" id="menu-icon">
@@ -65,6 +66,10 @@
         </section>
     </div>
     
+    <script
+    src="https://kit.fontawesome.com/fc84bd7ef1.js"
+    crossorigin="anonymous"
+  ></script>
     
 </body>
 </html>
