--- a/pages/about.html
+++ b/pages/about.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../styles/style.css" />
-    <link href="https://fonts.cdnfonts.com/css/jorgey" rel="stylesheet" />
-    <link href="https://fonts.cdnfonts.com/css/okashi" rel="stylesheet" />
+    <link href="https://fonts.cdnfonts.com/css/jorgey" rel="stylesheet"/>
+    <link href="https://fonts.cdnfonts.com/css/okashi" rel="stylesheet"/>
+    <script src="../scripts/index.js" defer></script>
     <title>About</title>
   </head>
   <body>
@@ -19,7 +20,7 @@
         <li><a href="about.html">About</a></li>
         <li><a href="menu.html">Our Menu</a></li>
         <li><a href="reservations.html">Reservations</a></li>
-        <li><a href="">Reviews</a></li>
+        <li><a href="index.html#Reviews">Reviews</a></li>
       </ul>
 
       <div class="bx bx-menu" id="menu-icon">
@@ -75,5 +76,11 @@
         </p>
       </div>
     </section>
+
+
+  <script
+  src="https://kit.fontawesome.com/fc84bd7ef1.js"
+  crossorigin="anonymous"
+  ></script>  
   </body>
 </html>
